# aiedu-backend

./: .env  .env.example  .env.frontend.example  .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml  requirements.txt
.cursor/rules/: front-back-connect.mdc
.serena/: project.yml
app/: main.py
app/api/routes/: llm.py  test.py
app/clients/: base.py  openai_client.py
app/core/: config.py
app/services/: __init__.py  llm_service.py
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  health.py  llm.py  materials.py  qa.py
backend/app/clients/: __init__.py  asr_client.py  base.py  mineru_client.py  openai_client.py  vqa_client.py
backend/app/core/: config.py
backend/app/schemas/: __init__.py
backend/app/services/: llm_service.py  parse_service.py  vision_router.py
docs/: API.md  api-interaction.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: materials.ts  qa.ts
frontend/src/components/: MarkdownRenderer.tsx
frontend/src/hooks/: useFileUpload.ts  useFileUpload.tsx
frontend/src/lib/: api-client.ts  file-utils.ts
frontend/src/pages/: Index.tsx  Settings.tsx
frontend/src/types/: file.ts
src/: index.css
src/components/: FeatureCard.tsx  Header.tsx
src/components/ui/: button.tsx  card.tsx
src/pages/: Courses.tsx  Index.tsx  Settings.tsx
supabase/: config.toml
supabase/functions/identify-course/: index.ts
tests/: test_health.py  test_ping.py
(+5 files in other folders)
